After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 656365 - Automatic updates expand process list nodes
Automatic updates expand process list nodes
Status: RESOLVED FIXED
Product: system-monitor
Classification: Core
Component: process list
3.4.x
Other Linux
: Normal minor
: ---
Assigned To: Robert Roth
System-monitor maintainers
Depends on:
Blocks:
 
 
Reported: 2011-08-11 21:03 UTC by Philipp Cordes
Modified: 2012-09-27 20:38 UTC
See Also:
GNOME target: ---
GNOME version: 3.7/3.8


Attachments
Proposed patch (1.07 KB, patch)
2012-08-01 18:22 UTC, Robert Roth
none Details | Review

Description Philipp Cordes 2011-08-11 21:03:41 UTC
On every update, the nodes are expanded again. They should stay folded.

To reproduce:

 1.) Show process dependencies
 2.) Fold a dependency
 3.) Update the process list

Now the folded dependency has been expanded again.
Comment 1 Robert Roth 2012-01-06 08:02:11 UTC
This is still a problem with 3.3.3, updating version number and setting to NEW.
Comment 2 Robert Roth 2012-01-22 03:01:32 UTC
Could you please try this again with 3.3.4 to see if it's fixed? For me, the folded items do not expand automatically anymore.
Comment 3 André Klapper 2012-02-26 10:46:23 UTC
[Adding missing "QA Contact" entry so system monitor bug report changes can still be watched via the "Users to watch" list on https://bugzilla.gnome.org/userprefs.cgi?tab=email when the assignee is changed to an individual.]
Comment 4 Philipp Cordes 2012-04-19 11:18:58 UTC
The 3.4 livecd still has the issue when showing “My Processes” or “Active Processes”. It works fine with “All Processes”, though.
When switching between these view filters, folded nodes are also expanded. Expansion state should persist.
Comment 5 Robert Roth 2012-07-31 22:24:38 UTC
Setting back to NEW, as comment 4 mentions this still happens with my processes and active processes, and I also see this on 3.4.1 with these modes.
Comment 6 Robert Roth 2012-08-01 18:22:10 UTC
Created attachment 220090 [details] [review]
Proposed patch

This patch fixes proctable to avoid clearing the full treestore on each refresh. Tested and processes are added and removed as they are opened and closed, and the process table is also more responsive.
Comment 7 Robert Roth 2012-09-27 20:38:12 UTC
This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.