Do not clear the full treestore with my processes and active  processes. This way automatic updates do not expand  collapsed nodes.  https://bugzilla.gnome.org/show_bug.cgi?id=656365