src/proctable.cpp
@@ -995,7 +995,6 @@ proctable_update_list (ProcData * const procdata)
             if (procdata->config.show_tree)
             {
                 selection.save(procdata->tree);
-                proctable_clear_tree(procdata);
             }
             break;
 
@@ -1005,7 +1004,6 @@ proctable_update_list (ProcData * const procdata)
             if (procdata->config.show_tree)
             {
                 selection.save(procdata->tree);
-                proctable_clear_tree(procdata);
             }
             break;
     }
